--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   get: ^4.6.5
   get_storage: ^2.0.2
   equatable: ^2.0.3
+  flutter_easyloading: ^3.0.5
 
 dev_dependencies:
   flutter_test:
